--- a/Store/Store/Store/Pages/Store.Master
+++ b/Store/Store/Store/Pages/Store.Master
@@ -1,5 +1,5 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Store.master.cs" Inherits="Store.Pages.Store" %>
-<%@ Register TagPrefix="GS" TagName="CategoryLinks" Src="~/Controls/CategoryList.ascx" %>
+
 
 <!DOCTYPE html>
 
@@ -12,6 +12,7 @@
     <form id="form1" runat="server">
         <div>
             <div id="header">
+                 <GS:CartSummary runat="server" />
                 <div class="title">Store - магазин гаджетов</div>
             </div>
             <div id="categories">
