--- a/Store/Store/Store/Pages/Store.Master
+++ b/Store/Store/Store/Pages/Store.Master
@@ -1,6 +1,5 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Store.master.cs" Inherits="Store.Pages.Store" %>
 
-
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -12,11 +11,11 @@
     <form id="form1" runat="server">
         <div>
             <div id="header">
-                 <GS:CartSummary runat="server" />
+                 <S:CartSummary runat="server" />
                 <div class="title">Store - магазин гаджетов</div>
             </div>
             <div id="categories">
-                <GS:CategoryLinks runat="server" />
+                <S:CategoryLinks runat="server" />
             </div>
             <div>
                 <asp:ContentPlaceHolder ID="bodyContent" runat="server" />
